--- a/index2.html
+++ b/index2.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Website</title>
 </head>
 <body>
-   <h1>Hello World JKE</h1> 
+   <h1>Hello World JKEEEE</h1> 
 </body>
 </html>
